# slicey

./: .gitignore  Cargo.toml
src/: main.rs
src/gcode/: mod.rs
src/geometry/: mod.rs
src/slicer/: dlp_slicer.rs  fff_slicer.rs  mod.rs
test/example/: Cylinder.stl
