[package]
name = "slicey"
version = "0.1.0"
edition = "2021"

[dependencies]
bvh = "0.11.0"
clap = { version = "4.5.16", features = ["derive"] }
image = "0.25.6"
nalgebra = "0.33.2"
rayon = "1.10.0"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
stl_io = "0.8.2"

[dependencies.arcwelderlib-sys]
optional = true
path = "arcwelderlib-sys"

[features]
default = []
arcwelder = ["arcwelderlib-sys"]
